@@ -57,6 +57,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include "shapegroup.h"
 #include "shapefile.h"
 #include "locator.h"
+#include "combo.h"
 #include "Configuration.h"
 #include "objserial.h"
 #include "exceptions.h"
@@ -328,7 +329,7 @@ ExultStudio::ExultStudio(int argc, char **argv): files(0), curfile(0),
 	egg_ctx(0),
 	waiting_for_server(0), npcwin(0), npc_draw(0), npc_face_draw(0),
 	npc_ctx(0), objwin(0), obj_draw(0), shapewin(0), shape_draw(0),
-	equipwin(0), locwin(0)
+	equipwin(0), locwin(0), combowin(0)
 {
 	// Initialize the various subsystems
 	self = this;
@@ -469,6 +470,8 @@ ExultStudio::~ExultStudio()
 	equipwin = 0;
 	if (locwin)
 		delete locwin;
+	if (combowin)
+		delete combowin;
 	locwin = 0;
 	gtk_object_unref( GTK_OBJECT( app_xml ) );
 #ifndef WIN32
